--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -78,16 +78,15 @@ world242185337 {
 
 
 world785103634 {
-    # Show the list of bookmarks next to open GUIs.
-    B:bookmarkOverlayEnabled=true
-    B:cheatItemsEnabled=true
+    B:bookmarkOverlayEnabled=false
+    B:cheatItemsEnabled=false
 
     # Default item to use to fill up fluids when clicking on a fluid ingredient in the menu, (format: item_name@meta)
     S:defaultFluidContainerItem=
 
     # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=tin wire
+    S:filterText=processor
 
     # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
