--- a/config/tconstruct.cfg
+++ b/config/tconstruct.cfg
@@ -100,7 +100,7 @@ gameplay {
      >
 
     # Enables all items, even if the Module needed to obtain them is not active
-    B:registerAllItems=true
+    B:registerAllItems=false
 
     # Allows to reuse stencils in the stencil table to turn them into other stencils
     B:reuseStencils=true
