--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -80,6 +80,8 @@ world242185337 {
 world785103634 {
     # Show the list of bookmarks next to open GUIs.
     B:bookmarkOverlayEnabled=true
+
+    # Give items instead of showing the recipe.
     B:cheatItemsEnabled=false
 
     # Default item to use to fill up fluids when clicking on a fluid ingredient in the menu, (format: item_name@meta)
@@ -87,7 +89,7 @@ world785103634 {
 
     # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=diamond
+    S:filterText=machine hu
 
     # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
