added qft and a few new items
missing textures

--- a/config/infernalmobs.cfg
+++ b/config/infernalmobs.cfg
@@ -12,6 +12,7 @@ entitiesalwaysinfernal {
     B:EntityBruteZombie=false
     B:EntityCaramelSlime=false
     B:EntityCreeper=false
+    B:EntityCultistPortalLesser=false
     B:EntityDarkCreeper=false
     B:EntityDeathCreeper=false
     B:EntityDesertSpider=false
@@ -44,6 +45,7 @@ entitiesalwaysinfernal {
     B:EntityHungryPigZombie=false
     B:EntityHungrySpider=false
     B:EntityHungryZombie=false
+    B:EntityHusk=false
     B:EntityHuskZombie=false
     B:EntityIcyEnderman=false
     B:EntityJumpingCreeper=false
@@ -72,6 +74,7 @@ entitiesalwaysinfernal {
     B:EntitySpitfireSkeleton=false
     B:EntitySplittingCreeper=false
     B:EntityStrawberrySlime=false
+    B:EntityStray=false
     B:EntityStraySkeleton=false
     B:EntityThiefEnderman=false
     B:EntityUndeadWitch=false
@@ -170,10 +173,7 @@ entitybasehealth {
 
 
 general {
-    # time in seconds between mob check intervals. Higher values cost more performance, but might be more accurate.
     I:AntiMobFarmCheckInterval=30
-
-    # Anti Mob farming mechanic. Might cause overhead if enabled.
     B:AntiMobfarmingEnabled=true
     B:"MM_1UP enabled"=true
     B:"MM_Alchemist enabled"=true
@@ -210,8 +210,6 @@ general {
     I:eliteRarity=15
     I:infernoRarity=7
     D:maxOneShotDamage=10.0
-
-    # Damage in chunk per interval that triggers anti farm effects
     D:mobFarmDamageThreshold=150.0
     S:mobHealthFactor=1.0
     I:ultraRarity=7
@@ -231,6 +229,7 @@ permittedentities {
     B:EntityBruteZombie=true
     B:EntityCaramelSlime=true
     B:EntityCreeper=true
+    B:EntityCultistPortalLesser=true
     B:EntityDarkCreeper=true
     B:EntityDeathCreeper=true
     B:EntityDesertSpider=true
@@ -263,6 +262,7 @@ permittedentities {
     B:EntityHungryPigZombie=true
     B:EntityHungrySpider=true
     B:EntityHungryZombie=true
+    B:EntityHusk=true
     B:EntityHuskZombie=true
     B:EntityIcyEnderman=true
     B:EntityJumpingCreeper=true
@@ -291,6 +291,7 @@ permittedentities {
     B:EntitySpitfireSkeleton=true
     B:EntitySplittingCreeper=true
     B:EntityStrawberrySlime=true
+    B:EntityStray=true
     B:EntityStraySkeleton=true
     B:EntityThiefEnderman=true
     B:EntityUndeadWitch=true
