--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -13,11 +13,20 @@ world-1965823088 {
 
 
 world-78688046 {
-    B:bookmarkOverlayEnabled=false
+    # Show the list of bookmarks next to open GUIs.
+    B:bookmarkOverlayEnabled=true
+
+    # Give items instead of showing the recipe.
     B:cheatItemsEnabled=false
+
+    # Default item to use to fill up fluids when clicking on a fluid ingredient in the menu, (format: item_name@meta)
     S:defaultFluidContainerItem=
+
+    # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=quantum f
+    S:filterText=intelli
+
+    # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
 }
 
@@ -77,21 +86,49 @@ world242185337 {
 }
 
 
-world785103634 {
+world68884316 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=false
+    S:defaultFluidContainerItem=
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world784711666 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=false
+    S:defaultFluidContainerItem=
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world784711697 {
     # Show the list of bookmarks next to open GUIs.
     B:bookmarkOverlayEnabled=true
-
-    # Give items instead of showing the recipe.
-    B:cheatItemsEnabled=false
+    B:cheatItemsEnabled=true
 
     # Default item to use to fill up fluids when clicking on a fluid ingredient in the menu, (format: item_name@meta)
     S:defaultFluidContainerItem=
 
     # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=machine hu
+    S:filterText=pros
 
     # Show the list of ingredients next to open GUIs.
+    B:overlayEnabled=true
+}
+
+
+world785103634 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=false
+    S:defaultFluidContainerItem=
+    B:editEnabled=false
+    S:filterText=machine hu
     B:overlayEnabled=true
 }
 
