--- a/config/theoneprobe.cfg
+++ b/config/theoneprobe.cfg
@@ -16,19 +16,19 @@ client {
     # Color of the box (0 to disable) [default: 55006699]
     S:boxFillColor=55006699
 
-    # The distance to the left side of the screen. Use -1 if you don't want to set this [range: -1 ~ 10000, default: 120]
+    # The distance to the left side of the screen. Use -1 if you don't want to set this [range: -1 ~ 10000, default: 5]
     I:boxLeftX=220
 
     # How much the border should be offset (i.e. to create an 'outer' border) [range: 0 ~ 20, default: 0]
     I:boxOffset=0
 
-    # The distance to the right side of the screen. Use -1 if you don't want to set this [range: -1 ~ 10000, default: 2]
+    # The distance to the right side of the screen. Use -1 if you don't want to set this [range: -1 ~ 10000, default: -1]
     I:boxRightX=2
 
     # Thickness of the border of the box (0 to disable) [range: 0 ~ 20, default: 2]
     I:boxThickness=2
 
-    # The distance to the top side of the screen. Use -1 if you don't want to set this [range: -1 ~ 10000, default: 2]
+    # The distance to the top side of the screen. Use -1 if you don't want to set this [range: -1 ~ 10000, default: 5]
     I:boxTopY=2
 
     # Color of the border of the chest contents box (0 to disable) [default: ff006699]
@@ -52,7 +52,7 @@ client {
     # 0 means don't show break progress, 1 is show as bar, 2 is show as text [range: 0 ~ 2, default: 1]
     I:showBreakProgress=1
 
-    # If true show liquid information when the probe hits liquid first [default: true]
+    # If true show liquid information when the probe hits liquid first [default: false]
     B:showLiquids=true
 
     # Text style. Use a comma delimited list with colors like: 'red', 'green', 'blue', ... or style codes like 'underline', 'bold', 'italic', 'strikethrough', ... [default: red,bold]
@@ -113,7 +113,7 @@ providers {
         pneumaticcraft:entity
      >
 
-    # Order in which providers should be used [default: [theoneprobe:default], [theoneprobe:debug], [theoneprobe:block], [gregtech:energy_container_provider], [gregtech:fuelable_provider], [gregtech:workable_provider], [gregtech:controllable_provider], [gregtech:debug_pipe_net_provider], [gregtech:transformer_info_provider], [gtadditions:screwdriver_provider], [gtadditions:qubit_container_provider], [gtadditions:transformer_info_provider], [gtadditions:diode_info_provider], [gregicprobe:recipe_info_eut_provider], [gregicprobe:recipe_info_item_output], [gregicprobe:recipe_info_fluid_output], [appliedenergistics2:TileInfoProvider], [appliedenergistics2:PartInfoProvider], [enderio:default], [pneumaticcraft:default], [researchtable], [agricraft], [tombstone:top], [hammercore]]
+    # Order in which providers should be used [default: [theoneprobe:default], [theoneprobe:debug], [theoneprobe:block], [gregtech:energy_container_provider], [gregtech:fuelable_provider], [gregtech:workable_provider], [gregtech:controllable_provider], [gregtech:debug_pipe_net_provider], [gregtech:transformer_info_provider], [gtadditions:screwdriver_provider], [gtadditions:qubit_container_provider], [gtadditions:transformer_info_provider], [gtadditions:diode_info_provider], [gregicprobe:recipe_info_eut_provider], [gregicprobe:recipe_info_item_output], [gregicprobe:recipe_info_fluid_output], [modularmachinery:dynamic_machine_info_provider], [appliedenergistics2:TileInfoProvider], [appliedenergistics2:PartInfoProvider], [enderio:default], [tconstruct:casting], [tconstruct:progress], [pneumaticcraft:default], [tombstone:top], [hammercore]]
     S:sortedProviders <
         theoneprobe:default
         theoneprobe:debug
@@ -169,8 +169,6 @@ theoneprobe {
 
     # The maximum packet size to send an itemstack from client to server. Reduce this if you have issues with network lag caused by TOP [range: -1 ~ 32768, default: 20000]
     I:maxPacketToServer=20000
-
-    # Is the probe needed to show the tooltip? 0 = no, 1 = yes, 2 = yes and clients cannot override, 3 = probe needed for extended info only [range: 0 ~ 3, default: 3]
     I:needsProbe=3
 
     # Distance at which the probe works [range: 0.1 ~ 200.0, default: 6.0]
