--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -14,7 +14,7 @@ world-1965823088 {
 
 world-2060703100 {
     # Show the list of bookmarks next to open GUIs.
-    B:bookmarkOverlayEnabled=true
+    B:bookmarkOverlayEnabled=false
 
     # Give items instead of showing the recipe.
     B:cheatItemsEnabled=false
@@ -24,7 +24,7 @@ world-2060703100 {
 
     # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=lead ore
+    S:filterText=platinum gr
 
     # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
@@ -81,7 +81,7 @@ world214760177 {
     B:cheatItemsEnabled=false
     S:defaultFluidContainerItem=
     B:editEnabled=false
-    S:filterText=@appl
+    S:filterText=circuit 
     B:overlayEnabled=true
 }
 
