--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -14,7 +14,7 @@ world-1965823088 {
 
 world-2060703100 {
     # Show the list of bookmarks next to open GUIs.
-    B:bookmarkOverlayEnabled=false
+    B:bookmarkOverlayEnabled=true
 
     # Give items instead of showing the recipe.
     B:cheatItemsEnabled=false
@@ -24,7 +24,7 @@ world-2060703100 {
 
     # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=platinum gr
+    S:filterText=vacu
 
     # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
