--- a/config/gtadditions.cfg
+++ b/config/gtadditions.cfg
@@ -186,7 +186,7 @@ general {
         B:"Tinker's material alloying"=false
 
         # Add Smelting for GT Materials to Tinkers Smeltery
-        B:"Tinker's material smelting"=true
+        B:"Tinker's material smelting"=false
 
         # Add Tools with GT Metals to Tinkers
         B:"Tinker's metal tools"=true
