--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -24,7 +24,7 @@ world-2060703100 {
 
     # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=vacu
+    S:filterText=vac
 
     # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
