--- a/config/AppliedEnergistics2/AppliedEnergistics2.cfg
+++ b/config/AppliedEnergistics2/AppliedEnergistics2.cfg
@@ -13,7 +13,7 @@ autocrafting {
 
 
 automation {
-    I:formationPlaneEntityLimit=128
+    I:formationPlaneEntityLimit=32
 }
 
 
@@ -185,7 +185,7 @@ client {
 
 condenser {
     I:MatterBalls=512
-    I:Singularity=999999
+    I:Singularity=8000
 }
 
 
@@ -197,9 +197,9 @@ condenser {
 ##########################################################################################################
 
 controllersize {
-    I:maxControllerSizeX=64
-    I:maxControllerSizeY=64
-    I:maxControllerSizeZ=64
+    I:maxControllerSizeX=13
+    I:maxControllerSizeY=13
+    I:maxControllerSizeZ=13
 }
 
 
@@ -260,7 +260,7 @@ features {
         B:QuartzPickaxe=false
         B:QuartzSpade=false
         B:QuartzSword=false
-        B:QuartzWrench=false
+        B:QuartzWrench=true
         B:WirelessAccessTerminal=true
         B:WirelessCraftingTerminal=true
         B:WirelessFluidTerminal=true
@@ -599,10 +599,10 @@ wireless {
 worldgen {
     D:meteoriteClusterChance=0.1
     I:meteoriteDimensionWhitelist <
-        -28
+        -1
      >
     I:meteoriteMaximumSpawnHeight=180
-    I:minMeteoriteDistance=800
+    I:minMeteoriteDistance=400
     I:quartzOresClusterAmount=15
     I:quartzOresPerCluster=4
     D:spawnChargedChance=0.07999998331069946
