--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -43,18 +43,15 @@ world-2060703100 {
 
 
 world-597152155 {
-    # Show the list of bookmarks next to open GUIs.
     B:bookmarkOverlayEnabled=true
-
-    # Give items instead of showing the recipe.
-    B:cheatItemsEnabled=false
+    B:cheatItemsEnabled=true
 
     # Default item to use to fill up fluids when clicking on a fluid ingredient in the menu, (format: item_name@meta)
     S:defaultFluidContainerItem=
 
     # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=uhv
+    S:filterText=pattern ex
 
     # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
