remove Greg's Construct

--- a/config/gtadditions.cfg
+++ b/config/gtadditions.cfg
@@ -169,8 +169,8 @@ general {
 
     gregsconstruct {
         # Enable/Disable all GregsConstruct features
-        B:"Enable Greg's Construct"=true
-        B:EnableGregsConstruct=true
+        B:"Enable Greg's Construct"=false
+        B:EnableGregsConstruct=false
 
         # Whether or not to register fluid solidification recipes for parts
         B:"Fluid solidification recipes for parts"=true
@@ -190,9 +190,9 @@ general {
 
         # Add Tools with GT Metals to Tinkers
         B:"Tinker's metal tools"=true
-        B:TinkersGemTools=true
-        B:TinkersMaterialAlloying=true
-        B:TinkersMaterialsSmelting=true
+        B:TinkersGemTools=false
+        B:TinkersMaterialAlloying=false
+        B:TinkersMaterialsSmelting=false
         B:TinkersMetalTools=true
     }
 
