add GCYL Alumina dust to ItemBlacklist

--- a/config/jei/itemBlacklist.cfg
+++ b/config/jei/itemBlacklist.cfg
@@ -1962,6 +1962,7 @@ advanced {
         gregtech:rich_ore_tanzanite_0:4
         gregtech:poor_ore_quantium_0:10
         gregtech:ore_neodymium_monazite_0:11
+        gtadditions:ga_dust:44;
         gregtech:ore_neodymium_monazite_0:12
         gregtech:rich_ore_tanzanite_0:1
         gregtech:ore_neodymium_monazite_0:10
